testsuite/tests/lexical_envs/envs_5/test.out
CompilationUnit[1:1-3:9]
|prelude:
|  AdaNodeList[1:1-1:1]: <empty list>
|body:
|  LibraryItem[1:1-3:9]
|  |has_private:
|  |  PrivateAbsent[1:1-1:1]
|  |item:
|  |  SubpBody[1:1-3:9]
|  |  |overriding:
|  |  |  OverridingUnspecified[1:1-1:1]
|  |  |subp_spec:
|  |  |  SubpSpec[1:1-1:14]
|  |  |  |subp_kind:
|  |  |  |  SubpKindProcedure[1:1-1:10]
|  |  |  |subp_name:
|  |  |  |  DefiningName[1:11-1:14]
|  |  |  |  |name:
|  |  |  |  |  DottedName[1:11-1:14]
|  |  |  |  |  |prefix:
|  |  |  |  |  |  Id[1:11-1:12]: A
|  |  |  |  |  |suffix:
|  |  |  |  |  |  Id[1:13-1:14]: B
|  |  |  |subp_params: <null>
|  |  |  |subp_returns: <null>
|  |  |aspects: <null>
|  |  |decls:
|  |  |  DeclarativePart[1:17-2:1]
|  |  |  |decls:
|  |  |  |  AdaNodeList[1:17-1:17]: <empty list>
|  |  |stmts:
|  |  |  HandledStmts[2:6-3:1]
|  |  |  |stmts:
|  |  |  |  StmtList[2:6-2:6]: <empty list>
|  |  |  |exceptions:
|  |  |  |  AdaNodeList[1:17-1:17]: <empty list>
|  |  |end_name:
|  |  |  EndName[3:5-3:8]
|  |  |  |name:
|  |  |  |  DottedName[3:5-3:8]
|  |  |  |  |prefix:
|  |  |  |  |  Id[3:5-3:6]: A
|  |  |  |  |suffix:
|  |  |  |  |  Id[3:7-3:8]: B
|pragmas:
|  PragmaNodeList[3:9-3:9]: <empty list>

==== Dumping lexical environments ====
@1 = LexEnv(Static_Primary, Parent=$root, Node=<PackageDecl ["Standard"] __standard:1:1-121:14>):
    'a': [<EnumLiteralDecl ["'A'"] __standard:20:22-20:25>, <EnumLiteralDecl ["'A'"] __standard:21:27-21:30>, <EnumLiteralDecl ["'A'"] __standard:22:32-22:35>]
    a: [<PackageDecl ["A"] a.ads:1:1-3:7>]
    ascii: [<PackageDecl ["ASCII"] __standard:23:3-103:13>]
    boolean: [<TypeDecl ["Boolean"] __standard:3:3-3:33>]
    character: [<TypeDecl ["Character"] __standard:20:3-20:27>]
    constraint_error: [<ExceptionDecl ["Constraint_Error"] __standard:115:3-115:32>]
    duration: [<TypeDecl ["Duration"] __standard:111:3-113:42>]
    false: [<EnumLiteralDecl ["False"] __standard:3:20-3:25>]
    float: [<TypeDecl ["Float"] __standard:13:3-14:51>]
    integer: [<TypeDecl ["Integer"] __standard:4:3-4:54>]
    long_float: [<TypeDecl ["Long_Float"] __standard:15:3-16:73>]
    long_integer: [<TypeDecl ["Long_Integer"] __standard:9:3-9:66>]
    long_long_float: [<TypeDecl ["Long_Long_Float"] __standard:17:3-19:33>]
    long_long_integer: [<TypeDecl ["Long_Long_Integer"] __standard:10:3-10:66>]
    natural: [<SubtypeDecl ["Natural"] __standard:5:3-5:57>]
    positive: [<SubtypeDecl ["Positive"] __standard:6:3-6:57>]
    program_error: [<ExceptionDecl ["Program_Error"] __standard:116:3-116:32>]
    short_float: [<TypeDecl ["Short_Float"] __standard:11:3-12:51>]
    short_integer: [<TypeDecl ["Short_Integer"] __standard:8:3-8:66>]
    short_short_integer: [<TypeDecl ["Short_Short_Integer"] __standard:7:3-7:64>]
    storage_error: [<ExceptionDecl ["Storage_Error"] __standard:117:3-117:32>]
    string: [<TypeDecl ["String"] __standard:104:3-104:57>]
    tasking_error: [<ExceptionDecl ["Tasking_Error"] __standard:118:3-118:32>]
    true: [<EnumLiteralDecl ["True"] __standard:3:27-3:31>]
    universal_int_type_: [<TypeDecl ["Universal_Int_Type_"] __standard:119:3-119:45>]
    universal_real_type_: [<TypeDecl ["Universal_Real_Type_"] __standard:120:3-120:42>]
    wide_character: [<TypeDecl ["Wide_Character"] __standard:21:3-21:32>]
    wide_string: [<TypeDecl ["Wide_String"] __standard:106:3-107:39>]
    wide_wide_character: [<TypeDecl ["Wide_Wide_Character"] __standard:22:3-22:37>]
    wide_wide_string: [<TypeDecl ["Wide_Wide_String"] __standard:108:3-109:44>]

$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] __standard:1:1-121:14>]

@3 = LexEnv(Static_Primary, Parent=@2, Node=<SubpBody ["A.B"] a-b.adb:1:1-3:9>):
    <empty>

@2 = LexEnv(Static_Primary, Parent=@1, Node=<PackageDecl ["A"] a.ads:1:1-3:7>):
    b: [<SubpBody ["A.B"] a-b.adb:1:1-3:9>]
    pouet: [<ObjectDecl ["Pouet"] a.ads:2:4-2:20>]

@1 = LexEnv(Static_Primary, Parent=$root, Node=<PackageDecl ["Standard"] __standard:1:1-121:14>):
    'a': [<EnumLiteralDecl ["'A'"] __standard:20:22-20:25>, <EnumLiteralDecl ["'A'"] __standard:21:27-21:30>, <EnumLiteralDecl ["'A'"] __standard:22:32-22:35>]
    a: [<PackageDecl ["A"] a.ads:1:1-3:7>]
    ascii: [<PackageDecl ["ASCII"] __standard:23:3-103:13>]
    boolean: [<TypeDecl ["Boolean"] __standard:3:3-3:33>]
    character: [<TypeDecl ["Character"] __standard:20:3-20:27>]
    constraint_error: [<ExceptionDecl ["Constraint_Error"] __standard:115:3-115:32>]
    duration: [<TypeDecl ["Duration"] __standard:111:3-113:42>]
    false: [<EnumLiteralDecl ["False"] __standard:3:20-3:25>]
    float: [<TypeDecl ["Float"] __standard:13:3-14:51>]
    integer: [<TypeDecl ["Integer"] __standard:4:3-4:54>]
    long_float: [<TypeDecl ["Long_Float"] __standard:15:3-16:73>]
    long_integer: [<TypeDecl ["Long_Integer"] __standard:9:3-9:66>]
    long_long_float: [<TypeDecl ["Long_Long_Float"] __standard:17:3-19:33>]
    long_long_integer: [<TypeDecl ["Long_Long_Integer"] __standard:10:3-10:66>]
    natural: [<SubtypeDecl ["Natural"] __standard:5:3-5:57>]
    positive: [<SubtypeDecl ["Positive"] __standard:6:3-6:57>]
    program_error: [<ExceptionDecl ["Program_Error"] __standard:116:3-116:32>]
    short_float: [<TypeDecl ["Short_Float"] __standard:11:3-12:51>]
    short_integer: [<TypeDecl ["Short_Integer"] __standard:8:3-8:66>]
    short_short_integer: [<TypeDecl ["Short_Short_Integer"] __standard:7:3-7:64>]
    storage_error: [<ExceptionDecl ["Storage_Error"] __standard:117:3-117:32>]
    string: [<TypeDecl ["String"] __standard:104:3-104:57>]
    tasking_error: [<ExceptionDecl ["Tasking_Error"] __standard:118:3-118:32>]
    true: [<EnumLiteralDecl ["True"] __standard:3:27-3:31>]
    universal_int_type_: [<TypeDecl ["Universal_Int_Type_"] __standard:119:3-119:45>]
    universal_real_type_: [<TypeDecl ["Universal_Real_Type_"] __standard:120:3-120:42>]
    wide_character: [<TypeDecl ["Wide_Character"] __standard:21:3-21:32>]
    wide_string: [<TypeDecl ["Wide_String"] __standard:106:3-107:39>]
    wide_wide_character: [<TypeDecl ["Wide_Wide_Character"] __standard:22:3-22:37>]
    wide_wide_string: [<TypeDecl ["Wide_Wide_String"] __standard:108:3-109:44>]

$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] __standard:1:1-121:14>]

